<resources>
    <string name="app_name">MultiScreen</string>
    <string name="Titulo">Ingreso de datos</string>
    <string name="IngresarNombre">Ingrese nombre(s):</string>
    <string name="IngresarAP"><p>Ingrese apellido paterno:</p></string>
    <string name="IngresarAM"><p>Ingrese apellido materno:</p></string>
    <string name="IngresarEmail"><p>Ingrese correo electrónico:</p></string>
    <string name="IngresarDNI">Ingrese DNI:</string>
    <string name="IngresarTelefono"><p>Ingrese teléfono:</p></string>
    <string name="IngresarImagen">Ingresar imagen:</string>
    <string name="HintNombre">Nombre(s)</string>
    <string name="HintAP">Apellido Paterno</string>
    <string name="HintAM">Apellido Materno</string>
    <string name="HintEmail">Email</string>
    <string name="HintDNI">DNI</string>
    <string name="HintTelefono">Teléfono</string>
    <string name="Imagen">Imagen de envio</string>
    <string name="BotonImagen">Buscar imagen</string>
    <string name="ProcesarDatos">Procesar datos</string>
    <string name="URL">URL(opcional)</string>
    <string name="HintURL">URL</string>
    <string name="SegundoTitulo">Envio de datos</string>
    <string name="HintImagen">Imagen</string>
    <string name="Enviar">Enviar datos</string>
</resources>
