<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="la.hackspace.multiscreen.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/Titulo"
            android:textColor="@color/Negro"
            android:textSize="35sp"
            android:textStyle="bold"
            android:id="@+id/tvTituloIngreso"/> <!-- Título -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/tvTituloIngreso"
            android:text="@string/IngresarNombre"
            android:textColor="@color/Negro"
            android:id="@+id/tvNombreP"/> <!-- Nombres -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTituloIngreso"
            android:inputType="text"
            android:hint="@string/HintNombre"
            android:id="@+id/etNombre"/> <!-- Ingresar nombres -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etNombre"
            android:text="@string/IngresarAP"
            android:textColor="@color/Negro" /> <!-- Apellido paterno -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNombre"
            android:inputType="text"
            android:id="@+id/etAP"
            android:hint="@string/HintAP" /> <!-- Ingresar apellido paterno -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etAP"
            android:text="@string/IngresarAM"
            android:textColor="@color/Negro" /> <!-- Apellido materno -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAP"
            android:inputType="text"
            android:id="@+id/etAM"
            android:hint="@string/HintAM" /> <!-- Ingresar apellido materno -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etAM"
            android:text="@string/IngresarEmail"
            android:textColor="@color/Negro" /> <!-- Email -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAM"
            android:id="@+id/etEmail"
            android:hint="@string/HintEmail"
            android:inputType="textEmailAddress" /> <!-- Ingresar email -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalC"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:text="@string/IngresarDNI"
            android:textColor="@color/Negro" /> <!-- DNI -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalC"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:id="@+id/etDNI"
            android:hint="@string/HintDNI"
            android:inputType="number" /> <!-- Ingresar DNI -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalC"
            app:layout_constraintTop_toBottomOf="@id/etDNI"
            android:text="@string/IngresarTelefono"
            android:textColor="@color/Negro" /> <!-- Teléfono -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalC"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etDNI"
            android:id="@+id/etTelefono"
            android:hint="@string/HintTelefono"
            android:inputType="number" /> <!-- Ingresar teléfono -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etTelefono"
            android:id="@+id/buInsertarImg"
            android:onClick="IngresarImagen"
            android:text="@string/IngresarImagen" /> <!-- Boton imagen -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/buInsertarImg"
            android:text="@string/URL"
            android:textColor="@color/Negro"
            android:id="@+id/tvURL"/> <!-- URL de imagen -->

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/tvURL"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minLines="2"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:id="@+id/etURL"
            android:hint="@string/HintURL"/> <!-- Ingresar URL de imagen -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glVerticalM"
            app:layout_constraintTop_toBottomOf="@id/etURL"
            android:id="@+id/buSiguienteActividad"
            android:onClick="SiguienteActividad"
            android:text="@string/ProcesarDatos" /> <!-- Boton siguiente actividad -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/glVerticalM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:id="@+id/ivImagen"
            android:contentDescription="@string/Imagen"
            android:src="@drawable/iconosimple" /> <!-- Imagen -->

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/glVerticalM"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"
            android:id="@+id/glVerticalC"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
